tests/baselines/reference/plusOperatorInvalidOperations.errors.txt
==== tests/cases/compiler/plusOperatorInvalidOperations.ts (2 errors) ====
    // Unary operator +
    var b;
    
    // operand before +
    var result1 = b+;   //expect error
                    ~
!!! plusOperatorInvalidOperations.ts(5,17): error TS1003: Identifier expected.
    
    // miss  an operand
    var result2 =+;
                  ~
!!! plusOperatorInvalidOperations.ts(8,15): error TS1003: Identifier expected.